tests/refinements/refinements.exp

assignment.js:16:14,21: null
This type is incompatible with
assignment.js:10:12,13:1: object type

assignment.js:16:14,21: undefined
This type is incompatible with
assignment.js:10:12,13:1: object type

assignment.js:22:16,21: property parent
Property cannot be accessed on possibly null value
assignment.js:22:14,14: null

assignment.js:22:16,21: property parent
Property cannot be accessed on possibly undefined value
assignment.js:22:14,14: undefined

bool.js:12:3,6: access of computed property/element
Computed property/element cannot be accessed on possibly null value
bool.js:3:18,21: null

bool.js:12:3,6: access of computed property/element
Computed property/element cannot be accessed on possibly undefined value
bool.js:3:18,21: undefined

bool.js:18:7,10: access of computed property/element
Computed property/element cannot be accessed on possibly null value
bool.js:15:18,21: null

bool.js:18:7,10: access of computed property/element
Computed property/element cannot be accessed on possibly undefined value
bool.js:15:18,21: undefined

bool.js:24:13,17: boolean
This type is incompatible with
bool.js:24:7,17: number

bool.js:27:7,11: boolean
This type is incompatible with
bool.js:27:7,17: number

cond_prop.js:11:10,37: function call
Error:
cond_prop.js:7:16,17: object type
This type is incompatible with
cond_prop.js:3:13,41: union type

hasOwnProperty.js:4:3,7: call of method y
Function cannot be called on possibly undefined value
hasOwnProperty.js:3:20,29: undefined

heap_defassign.js:3:26,31: string
This type is incompatible with
heap_defassign.js:10:12,17: number

heap_defassign.js:3:26,31: string
This type is incompatible with
heap_defassign.js:16:12,17: number

heap_defassign.js:3:26,31: string
This type is incompatible with
heap_defassign.js:22:12,17: number

heap_defassign.js:3:26,31: string
This type is incompatible with
heap_defassign.js:30:12,17: number

heap_defassign.js:3:26,31: string
This type is incompatible with
heap_defassign.js:38:12,17: number

heap_defassign.js:3:26,31: string
This type is incompatible with
heap_defassign.js:62:16,21: number

heap_defassign.js:3:26,31: string
This type is incompatible with
heap_defassign.js:73:12,17: number

heap_defassign.js:62:25,29: string
This type is incompatible with
heap_defassign.js:62:16,21: number

heap_defassign.js:65:20,24: number
This type is incompatible with
heap_defassign.js:65:11,16: string

mixed.js:8:5,18: function call
Error:
mixed.js:6:17,21: number
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:14:5,18: function call
Error:
mixed.js:12:17,21: string
This type is incompatible with
mixed.js:3:25,30: number

mixed.js:20:5,18: function call
Error:
mixed.js:18:18,22: boolean
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:26:5,18: function call
Error:
mixed.js:24:17,21: function
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:32:5,18: function call
Error:
mixed.js:30:18,22: null
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:32:5,18: function call
Error:
mixed.js:30:18,22: object
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:38:5,18: function call
Error:
mixed.js:36:18,22: array
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:44:5,18: function call
Error:
mixed.js:42:19,23: undefined
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:50:5,18: function call
Error:
mixed.js:48:19,23: null
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:56:5,18: function call
Error:
mixed.js:54:19,23: null
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:56:5,18: function call
Error:
mixed.js:54:19,23: undefined
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:62:5,18: function call
Error:
mixed.js:60:19,23: boolean
This type is incompatible with
mixed.js:4:25,30: string

mixed.js:68:5,18: function call
Error:
mixed.js:66:20,24: boolean
This type is incompatible with
mixed.js:4:25,30: string

not.js:3:18,21: boolean
This type is incompatible with
not.js:5:5,7: number

not.js:3:18,21: null
This type is incompatible with
not.js:5:5,7: number

not.js:3:18,21: undefined
This type is incompatible with
not.js:5:5,7: number

not.js:11:5,8: access of computed property/element
Computed property/element cannot be accessed on
not.js:9:18,23: number

not.js:11:5,8: access of computed property/element
Computed property/element cannot be accessed on possibly null value
not.js:9:18,23: null

not.js:11:5,8: access of computed property/element
Computed property/element cannot be accessed on possibly undefined value
not.js:9:18,23: undefined

not.js:21:5,8: access of computed property/element
Computed property/element cannot be accessed on
not.js:15:19,24: number

null.js:4:13,16: null
This type is incompatible with
null.js:4:7,16: number

null.js:7:7,10: null
This type is incompatible with
null.js:7:7,16: number

property.js:64:12,17: null
This type is incompatible with
property.js:61:59,64: string

property.js:64:12,17: undefined
This type is incompatible with
property.js:61:59,64: string

refinements.js:2:16,16: number
This type is incompatible with
refinements.js:4:15,20: string

refinements.js:2:20,23: null
This type is incompatible with
refinements.js:7:11,16: string

refinements.js:5:13,17: boolean
This type is incompatible with
refinements.js:7:11,16: string

refinements.js:11:16,16: number
This type is incompatible with
refinements.js:13:15,20: string

refinements.js:11:20,23: null
This type is incompatible with
refinements.js:13:15,20: string

refinements.js:14:13,17: boolean
This type is incompatible with
refinements.js:16:11,16: string

refinements.js:24:13,19: string
This type is incompatible with
refinements.js:33:15,20: number

refinements.js:27:13,19: string
This type is incompatible with
refinements.js:33:15,20: number

refinements.js:36:20,20: number
This type is incompatible with
refinements.js:36:11,16: string

refinements.js:40:21,21: number
This type is incompatible with
refinements.js:43:15,20: string

refinements.js:40:25,28: null
This type is incompatible with
refinements.js:45:11,16: string

refinements.js:42:14,18: boolean
This type is incompatible with
refinements.js:45:11,16: string

refinements.js:50:13,17: boolean
This type is incompatible with
refinements.js:54:11,16: number

switch.js:3:29,34: number
This type is incompatible with
switch.js:3:38,43: string

switch.js:27:14,20: access of computed property/element
Computed property/element cannot be accessed on
switch.js:23:30,35: number

switch.js:37:14,20: access of computed property/element
Computed property/element cannot be accessed on
switch.js:33:30,35: number

switch.js:43:22,27: string
This type is incompatible with
switch.js:51:15,20: number

tagged_union.js:20:12,28: call of method charAt
Method cannot be called on possibly undefined value
tagged_union.js:20:12,18: undefined

tagged_union.js:34:30,36: string literal Bad
Expected string literal Good, got Bad instead
tagged_union.js:34:39,44: string literal Good

tagged_union.js:35:9,13: string literal Maybe
Expected string literal No, got Maybe instead
tagged_union.js:35:16,19: string literal No

tagged_union.js:40:6,10: string literal Maybe
This type is incompatible with
tagged_union.js:40:13,24: union type

tagged_union.js:40:8,10: property raw
Property not found in
tagged_union.js:27:15,46: object type

tagged_union.js:72:21,21: property A
Property not found in
tagged_union.js:67:10,31: object type

tagged_union.js:82:17,27: property nationality
Property not found in
tagged_union.js:78:16,32: object type

typeof.js:5:5,8: access of computed property/element
Computed property/element cannot be accessed on
typeof.js:3:17,20: boolean

typeof.js:10:11,14: null
This type is incompatible with
typeof.js:9:17,22: number

typeof.js:23:3,16: call of method stuff
Function cannot be called on possibly undefined value
[LIB] lib.js:3:27,45: undefined

typeof.js:23:3,16: call of method stuff
Method cannot be called on possibly undefined value
[LIB] lib.js:3:50,53: undefined

typeof.js:26:7,11: property stuff
Property cannot be accessed on possibly undefined value
[LIB] lib.js:3:50,53: undefined

typeof.js:30:5,18: call of method stuff
Function cannot be called on possibly undefined value
[LIB] lib.js:3:27,45: undefined

undef.js:29:29,34: null
This type is incompatible with
undef.js:31:13,20: number

undef.js:35:33,38: null
This type is incompatible with
undef.js:38:13,20: number

undef.js:42:35,40: null
This type is incompatible with
undef.js:44:13,22: number

undef.js:48:39,44: null
This type is incompatible with
undef.js:51:13,22: number

undef.js:64:46,51: null
This type is incompatible with
undef.js:69:13,20: number

undef.js:64:46,51: undefined
This type is incompatible with
undef.js:69:13,20: number

undef.js:74:13,21: undefined
This type is incompatible with
undef.js:74:7,21: number

undef.js:77:7,15: undefined
This type is incompatible with
undef.js:77:7,21: number

union.js:7:5,8: access of computed property/element
Computed property/element cannot be accessed on
union.js:3:23,26: boolean

union.js:13:5,8: access of computed property/element
Computed property/element cannot be accessed on
union.js:3:14,19: number

union.js:19:5,8: access of computed property/element
Computed property/element cannot be accessed on
union.js:3:14,19: number

void.js:29:28,33: null
This type is incompatible with
void.js:31:13,20: number

void.js:35:32,37: null
This type is incompatible with
void.js:38:13,20: number

void.js:42:33,38: null
This type is incompatible with
void.js:44:13,22: number

void.js:48:37,42: null
This type is incompatible with
void.js:51:13,22: number

void.js:55:35,40: undefined
This type is incompatible with
void.js:56:32,39: number

void.js:61:39,44: undefined
This type is incompatible with
void.js:62:32,39: number

void.js:68:41,46: undefined
This type is incompatible with
void.js:69:36,45: number

void.js:74:45,50: undefined
This type is incompatible with
void.js:75:36,45: number

void.js:82:13,18: undefined
This type is incompatible with
void.js:82:7,18: number

void.js:85:7,12: undefined
This type is incompatible with
void.js:85:7,19: number

Found 96 errors
